--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -36,7 +36,7 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     -name: Install test dependencies
     - run: |
-        if [ -f test/requirements.txt ]; then pip install -r test/requirements.txt; fi
+        if [ -f "test/requirements.txt" ]; then pip install -r test/requirements.txt; fi
     - name: Test with unittest
       run: |
         python -m unittest discover test
