--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -35,7 +35,7 @@ jobs:
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     -name: Install test dependencies
-    - run: |
+     run: |
         if [ -f "test/requirements.txt" ]; then pip install -r test/requirements.txt; fi
     - name: Test with unittest
       run: |
